<resources>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="about_version">版本: %s</string>
    <string name="preference_key_signal_monitor">key_signal_monitor</string>
    <string name="settings_regular">常用设置</string>
    <string name="settings_signal_monitor_title">后台信号监控服务</string>
    <string name="settings_signal_monitor_summary">此服务主要用于在后台监控信号的变化.</string>
    <string name="text_copyright">Copyright © 2017 深圳市金立通信设备有限公司 测试平台部 版权所有</string>
    <string name="permission_write_external_storage_rationale">场测工具在测试过程中需在外部存储器读取文件，确认授予?</string>
    <string name="permission_write_external_storage_rationale_denied">读取外部存储器权限已被否决，使用此程序必须拥有此权限.</string>
    <string name="permission_call_phone_rationale">场测工具在测试过程中需拨打电话，确认授予?</string>
    <string name="permission_read_call_log_rationale">场测工具在测试过程中需读取通话记录，确认授予?</string>
    <string name="permission_read_internet_rationale">场测工具在测试过程中需要联网，确认授予?</string>
    <string name="permission_read_send_sms_rationale">场测工具在测试过程中需要发短信，确认授予?</string>
    <string name="go_settings">去设置</string>
    <string name="main_name">场测自动化集</string>
    <string name="empty_notice">请先添加应用</string>
    <string name="not_implemented_yet">当前应用还未实现功能.</string>
    <string name="start_app_exception">启动应用出现异常.</string>
    <string name="delete_app_message">确定要移除此应用?</string>
    <string name="delete_app_btn_ok">确定</string>
    <string name="delete_app_btn_discard">取消</string>
    <string name="info_message">1. 在测试开始前，请确保将此应用添加到系统管家的清理白名单.\n\n</string>
    <string name="to_use_system_app_notice">当前功能只针对系统签名版本开放，请安装系统签名版本</string>
    <string name="install_label_name">添加应用</string>
    <string name="empty_apps">应用库是空的.</string>
    <string name="install">添加</string>
    <string name="installed">已添加</string>
    <string name="app_has_installed">应用已添加.</string>
    <string name="signal_label_name">手机信号</string>
    <string name="signal_notice">注意事项：\n\n1.报告文件路径：sdcard/field/signal.\n\n2.请将该APK加入到清理白名单中.\n\n3.测试频率间隔不要设置太小，合理应大于3秒.\n</string>
    <string name="signal_frequency">测试频率(单位：秒):</string>
    <string name="signal_start">开始测试</string>
    <string name="signal_stop">结束测试</string>
    <string name="signal_not_supported_message">当前的系统版本不支持信号强度获取．</string>
    <string name="signal_not_supported_ok">返回主界面</string>
    <string name="permission_not_granted">读取手机状态信息权限被拒绝</string>
    <string name="permission_read_phone_state_rationale">获取信号需要读取手机状态信息权限，确认授予?</string>
    <string name="permission_read_phone_state_rationale_denied">读取手机状态信息权限已被否决，使用此程序必须拥有此权限.</string>
    <string name="frequency_set_error">测试频率设置错误，间隔必须大于0，小于300．</string>
    <string name="signal_foreground_service_title">场测工具正在运行</string>
    <string name="signal_foreground_service_subtitle">信号监控中…</string>
    <string name="signal_monitor_started">信号监控已开启.</string>
    <string name="signal_monitor_stopped">信号监控已停止.</string>
    <string name="export_loading">正在导出数据.</string>
    <string name="export_signal_error_no_data">无测试数据导出.</string>
    <string name="export_signal_error_create_excel_failure">无法创建导出文件.</string>
    <string name="export_signal_error_failure">导出数据出现异常.</string>
    <string name="export_signal_success">测试数据路径：%s</string>
    <string name="signal_about">开发者: 邓望建[dengwj@gione.com]</string>
    <string name="incoming_label_name">辅助接通</string>
    <string name="number">电话号码</string>
    <string name="count">通话轮次</string>
    <string name="gap_time">通话间隔</string>
    <string name="call_time">通话时长</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="result">测试结果</string>
    <string name="app_about">测试完成</string>
    <string name="str_ok">确定</string>
    <string name="Total_times">测试总数</string>
    <string name="successCount">成功个数</string>
    <string name="count_fail">失败个数</string>
    <string name="RunningTime">测试时间</string>
    <string name="title_activity_my_telephony">监控来电</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="isDistinguishEndStr">定时挂断时间(秒)</string>
    <string name="action_version">版本号</string>
    <string name="action_author">金立OS中心 自动化组</string>
    <string name="author_name">——宋研聪</string>
    <string name="action_abouts">关于</string>
    <string name="clear_report">清除测试结果</string>
    <string name="show_report">查看测试结果</string>
    <string name="distinguish_text">来电后自动挂断</string>
    <string name="is_auto_answer">来电后自动接听</string>
    <string name="is_auto_end">接通后自动挂断</string>
    <string name="hangup">挂断</string>
    <string name="auto_end_time_text">接通后</string>
    <string name="default_end_time" translatable="false">5</string>
    <string name="gap_time_text">最大间隔时间(单位:秒)</string>
    <string name="start_test">开始</string>
    <string name="max_space_time" translatable="false">60</string>
    <string name="export_excel">导出到excel</string>
    <string name="Stop">停止</string>
    <string name="Start">开始</string>
    <string name="Warning">系统提示</string>
    <string name="quitAsk">确定要退出吗?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="export_success">导出成功到%1$s</string>
    <string name="clearSuccess">清除成功</string>
    <string name="clearFail">清除失败</string>
    <string name="successful">成功</string>
    <string name="failed">失败</string>
    <string name="tool_tips">帮助: 1.Excel存放路径:内部存储器/field/incoming/incomingCallRecord.xls</string>
    <string name="ReportSelected">选择报告</string>
    <string name="noOP">无操作</string>
    <string name="tooFastTips">间隔不到3秒，太快。不做处理</string>
    <string name="gaptime_timeout">间隔时间超时，当前为%1$s</string>
    <string name="testTimes">测试次数</string>
    <string name="incoming_about">开发者: 宋研聪[songyc@gionee.com]</string>
    <string name="out_going_label_name">接通率</string>
    <string name="successfulCount">成功个数</string>
    <string name="failedCount">失败个数</string>
    <string name="fail">失败</string>
    <string name="support_single_sim">目前仅支持单个SIM卡（双卡手机只能装一张SIM卡）</string>
    <string name="speaker_phone_on">是否自动开启扬声器</string>
    <string name="testReport">查看报告</string>
    <string name="clearReport">清除报告</string>
    <string name="restoreDefault">恢复默认参数</string>
    <string name="default_number" translatable="false">10086,10010</string>
    <string name="default_count" translatable="false">3</string>
    <string name="default_timeout" translatable="false">20</string>
    <string name="default_duration" translatable="false">10</string>
    <string name="default_duration_sum" translatable="false">60</string>
    <string name="duration_sum_str">每轮时长(秒)</string>
    <string name="number_input_tips">多个联系人需要用逗号“,”分开</string>
    <string name="tools_Tips">本工具实现对多个号码轮流拨打;\n1.输入电话号码时需要用英文逗号隔开;\n2.分别拨打号码完毕为一轮;\n3.Excel存放路径:内部存储器/field/outgoing/outGoingCallRecord.xls</string>
    <string name="showReport">查看测试结果</string>
    <string name="clear_Report">清除测试结果</string>
    <string name="restore_default">恢复默认参数</string>
    <string name="report_select">选择报告</string>
    <string name="dialTime">拔号时间</string>
    <string name="offHookTime">接通时间</string>
    <string name="hangUpTime">挂断时间</string>
    <string name="insertSimTips">请先插入卡</string>
    <string name="TooShortTips">每轮总时长太小，请至少设置为%1$i秒</string>
    <string name="stop">停止</string>
    <string name="warning">系统提示</string>
    <string name="quit_ask">确定要退出吗?</string>
    <string name="restore_ask">确定要恢复默认参数</string>
    <string name="clearReportAsk">确定清除全部报告数据?</string>
    <string name="clear_success">测试结果已经清除</string>
    <string name="exportExcel">导出Excel</string>
    <string name="outgoing_about">开发者: 宋研聪[songyc@gionee.com]</string>
    <string name="call_loss_ratio_label_name">呼损率</string>
    <string name="call_loss_ratio_default_number" translatable="false">10086,10010</string>
    <string name="call_loss_ratio_default_count" translatable="false">3</string>
    <string name="call_loss_ratio_default_timeout" translatable="false">20</string>
    <string name="call_loss_ratio_default_duration" translatable="false">10</string>
    <string name="call_loss_ratio_default_duration_sum" translatable="false">60</string>
    <string name="call_loss_ratio_duration_sum_str">每轮时长(秒)</string>
    <string name="call_loss_ratio_number_input_tips">多个联系人需要用逗号“,”分开</string>
    <string name="call_loss_ratio_tools_Tips">本工具实现对多个号码轮流拨打;\n1.输入电话号码时需要用英文逗号隔开;\n2.分别拨打号码完毕为一轮;\n3.Excel存放路径:内部存储器/Field/CallLossRatio/CallLossRatioRecord.xls</string>
    <string name="call_loss_ratio_dialTime">拔号时间</string>
    <string name="call_loss_ratio_offHookTime">接通时间</string>
    <string name="call_loss_ratio_hangUpTime">挂断时间</string>
    <string name="call_loss_ratio_about">开发者: 宋研聪[songyc@gionee.com]</string>
    <string name="start_testing">开始测试</string>
    <string name="stop_testing">停止测试</string>
    <string name="cycle_index">循环次数：</string>
    <string name="data_reset_about">关于</string>
    <string name="matters_needing_attention">注意事项</string>
    <string name="data_reactivation">数据重激活</string>
    <string name="cycle_erro">请输入正确的循环次数</string>
    <string name="retest_times">复测次数：</string>
    <string name="retest_erro">请输入正确的复测次数</string>
    <string name="data_reset_test">查看测试详情</string>
    <string name="data_reset_erro">还没有测试报告，请测试后再查看</string>
    <string name="data_reset_test_list">测试报告列表</string>
    <string name="data_reset_about_name">开发者: 熊海宽[xionghk@gionee.com]</string>
    <string name="message_send">信息收发</string>
    <string name="phone">号码：</string>
    <string name="frequency">次数：</string>
    <string name="network_switch">网络切换</string>
    <string name="mms">彩信</string>
    <string name="sms">短信</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="exportReports">下载速率汇总表</string>
    <string name="throughput">吞吐率</string>
    <string name="throughputtest">吞吐率性能测试</string>
    <string name="message_test">查看测试详情</string>
    <string name="toolsTips">条件：\n1、请把本工具加入系统管家允许自启\n2、请不要设置锁屏密码和SIM卡密码\n3.Excel存放路径:内部存储器/Field/network_switch/networkSwitchRecord.xls\n目的：\n开关飞行模式、重启手机、切换数据连接使用卡后，检查是否识卡、是否驻网成功和是否能上网。</string>
    <string name="network_switch_help">条件：\n1、安装后，请把本工具加入系统管家允许自启\n2、请不要设置锁屏密码和SIM卡密码\n\n选项:\n切换飞行模式：开启、关闭飞行模式一次\n重启手机：重启手机一次\n切换数据连接：切换默认上网的SIM卡\n是否识卡：测试后检查是否读卡\n是否驻网：检查SIM卡是否注册网络\n能否上网：检查默认上网的SIM卡能否上网\nExcel存放路径:内部存储器/Field/network_switch/networkSwitchRecord.xls</string>
    <string name="checkBox_tips">一、测试项目:</string>
    <string name="checkBox_Flight_Mode">切换飞行模式</string>
    <string name="checkBox_switch_sim">切换SIM卡</string>
    <string name="checkBox_Reboot">重启</string>
    <string name="testRoundString">三、测试次数:</string>
    <string name="roundString">次</string>
    <string name="checkNetworkType">二、检查项目:</string>
    <string name="checkBox_SearchSimNetwork">是否驻网</string>
    <string name="checkBox_identification">是否识卡</string>
    <string name="checkBox_Internet">能否上网</string>
    <string name="start_btn">开始测试</string>
    <string name="network_switch_about">开发者: 宋研聪[songyc@gionee.com]</string>
    <string name="result_filename_tv_empty">请选择报告文件→</string>
    <string name="select_file_String">选择文件</string>
    <string name="listView_HeadLine_Result">测试结果</string>
    <string name="listView_HeadLine_count">序号</string>
    <string name="listView_HeadLine_Identification">识卡状态</string>
    <string name="listView_HeadLine_SearchSimNetwork">驻网状态</string>
    <string name="listView_HeadLine_Internet">能否上网</string>
    <string name="report_page_button_string">报告</string>
    <string name="main_page_button_string">测试</string>
    <string name="failed_details">失败详情</string>
    <string name="call_quality_label">记录质量</string>
    <string name="phone_num">机型/编号</string>
    <string name="quality_continue">断续:</string>
    <string name="quality_low_vol">声音小:</string>
    <string name="quality_noise">杂音:</string>
    <string name="open_excel_title">查看测试详情</string>
</resources>