<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:textColor="#000000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tools_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_Tips"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/number_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="0123456789,"
                android:gravity="center"
                android:text="@string/default_number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_input_tips"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/count_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_count"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gap_time"
                android:textColor="#080808"/>

            <EditText
                android:id="@+id/gap_time_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_timeout"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/call_time"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/call_time_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_duration"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration_sum_str"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/call_time_sum_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_duration_sum"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/is_speaker_phone_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaker_phone_on"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_single_sim"
            android:textColor="#000000"/>


        <Button
            android:id="@+id/out_going_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"/>
    </LinearLayout>


</ScrollView>
 
