<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/report_page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_report_RadioGroup"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_filename_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#f0ffff"
                android:gravity="center"
                android:text="@string/result_filename_tv_empty"/>

            <Button
                android:id="@+id/select_dialog_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/select_file_String"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/listView_HeadLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/listView_HeadLine_count"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/listView_HeadLine_Identification"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/listView_HeadLine_SearchSimNetwork"
                android:textAlignment="center"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/listView_HeadLine_Internet"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="切换网络"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/listView_HeadLine_Result"
                android:textAlignment="center"/>

        </LinearLayout>

        <ListView
            android:id="@+id/main_listView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorDark"
            android:dividerHeight="1px"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/main_report_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#f0ffff"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_btn"
            android:button="@null"
            android:checked="true"
            android:text="@string/main_page_button_string"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/report_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_btn"
            android:button="@null"
            android:text="@string/report_page_button_string"
            android:textAlignment="center"/>

    </RadioGroup>

</LinearLayout>
